--- a/package.json
+++ b/package.json
@@ -12,16 +12,15 @@
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
     "next": "15.1.7",
-    "next-swagger-doc": "^0.4.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "swagger-ui-react": "^5.19.0"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/swagger-ui-react": "^5.18.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
